messaging_app/messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-app-deployment
  labels:
    app: django-messaging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-messaging
  template:
    metadata:
      labels:
        app: django-messaging
    spec:
      containers:
        - name: django-app
      image: messaging_app_web:latest

      ports:
        - containerPort: 8000
      command: ["sh", "-c"]
      args:
        - |
          python manage.py migrate &&
          python manage.py runserver 0.0.0.0:8000
      resources:
        requests:
          cpu: "100m"
          memory: "256Mi"
        limits:
          cpu: "500m"
          memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-service
spec:
  selector:
    app: django-messaging
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
