messaging_app/messaging_app/ingress.yaml
apiVersion: networking.k8s.io.v1
kind: Ingress
metadata:
  name: messaging-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: mydomain.command
  http:
    paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: messaging-app-service
            port:
              number: 8000
